@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{590, 67}, {881, 1101}}</string>
+	<string>{{584, 168}, {994, 996}}</string>
 </dict>
 </plist>
