@@ -1,3 +1,7 @@
+2007-09-17  Satoshi Nakagawa <artension@gmail.com>
+
+	Improved server dialog.
+
 2007-09-16  Satoshi Nakagawa <artension@gmail.com>
 
 	Improved settings of tab key actions on preference dialog.
